[package]
name = "jupiter-dca"
version = "0.1.0"
edition = "2021"
description = "Anchor CPI client for the Jupiter program."
authors = ["Josh Teng <josh@raccoons.dev>"]
repository = "https://github.com/jup-ag/dca-cpi"
license = "Apache-2.0"
keywords = ["solana", "anchor", "cpi", "jupiter", "dca"]

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-gen = { git="https://github.com/zilayo/anchor-gen", rev = "be24bff" }
anchor-lang = { version = "0.28.0" }